# lab-azure-container-apps

./: .gitignore  README.md
containers/azure-observe-agent/: app.py  distro  events.jsonl  llm_planning_monitor.py  planning_callbacks.py  pyproject.toml  streamlit_planning_app.py  tasks.json
containers/azure-observe-agent/agents/: __init__.py  azure.py  travel.py
containers/intelligent-recommend-agent/: .az-release  .env.example  Dockerfile  Makefile  README.md  common.py  export-env.sh  main.py  pyproject.toml  requirements.txt
containers/intelligent-recommend-agent/agents/: __init__.py  base.py  chatbot.py  orchestrator.py  planning.py  schema.py  summary.py  travel.py  travel_itinerary_suggestion.py  travel_profile.py  travel_recommend.py  travel_summary.py  triage.py  weather.py  web_search.py
containers/intelligent-recommend-agent/agents/prompts/: planning_human_prompt.jinja  planning_system_prompt.jinja  summary_human_prompt.jinja  summary_system_prompt.jinja  travel_human_prompt.jinja  (+19 more)
containers/intelligent-recommend-agent/assets/: gen_marketing_db_en.py  gen_marketing_db_fr.py  gen_marketing_db_kr.py  gen_travel_db_kr.py  gen_travel_graphrag_input.py
containers/intelligent-recommend-agent/capabilities/: db.py  graphrag.py  mcp.py  tools.py
containers/intelligent-recommend-agent/cmds/: common.py  terminal.py  web_terminal.py
containers/intelligent-recommend-agent/scripts/: analyze_health_data.ipynb  gen_marketing_db_en.py  gen_marketing_db_fr.py  gen_marketing_db_kr.py  gen_travel_db_kr.py  gen_travel_graphrag.py  gen_travel_graphrag_input.py  load_assets_with_azure_storage_account.py
containers/intelligent-recommend-agent/static/: index.html
containers/intelligent-recommend-agent/tests/: __init__.py  test_capabilities_graphrag.py  test_capabilities_mcp.py
containers/intelligent-recommend-agent/tools/: invest.py  map.py  web.py
(+17 files in other folders)
