[project]
name = "azure-observe-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.25.0",
    "azure-mgmt-resource>=24.0.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.21",
    "langchain-openai>=0.3.33",
    "logging>=0.4.9.6",
    "mcp>=1.14.0",
    "openai>=1.108.0",
    "pydantic>=2.11.9",
    "streamlit>=1.49.1",
]
