[project]
name = "intelligent-recommend-agent"
version = "0.1.0"
description = "Agent that provides intelligent recommendations using Azure AI services."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-ai-projects>=1.0.0",
    "fastapi>=0.123.4",
    "grandalf>=0.8",
    "graphrag>=2.7.0",
    "investpy>=1.0.8",
    "langchain>=1.0.7",
    "langchain-mcp-adapters>=0.1.13",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "rich>=14.2.0",
    "websockets>=15.0.1",
]
