[project]
name = "intelligent-recommend-agent"
version = "0.1.0"
description = "Agent that provides intelligent recommendations using Azure AI services."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-ai-projects>=1.0.0",
    "faker>=38.2.0",
    "fastapi>=0.123.4",
    "googlemaps>=4.10.0",
    "grandalf>=0.8",
    "graphrag<2.7.0",
    "investpy>=1.0.8",
    "langchain<1.0.0",
    "langchain-community<1.0.0",
    "langchain-mcp-adapters<1.0.0",
    "langchain-openai<1.0.0",
    "langgraph<1.0.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "rich>=14.2.0",
    "websockets>=15.0.1",
]
